--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,24 +1,24 @@
-# Server Configuration
-server.port=8080
+# Server
+server.port=${PORT:8080}
 server.servlet.context-path=/
 
-# Spring Application Name
+# App
 spring.application.name=sectorista-backend
 
-# Database Configuration - Supabase PostgreSQL
-spring.datasource.url=jdbc:postgresql://db.hhprnfycfjqjsstkukit.supabase.co:5432/postgres
+# Database (ENV)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=sSWKGfWI73eebFAo
 
-# Connection Pool Configuration
+# Hikari
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
-# JPA Configuration
+# JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
