--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,20 +5,20 @@ server.servlet.context-path=/
 # App
 spring.application.name=sectorista-backend
 
-# Database (ENV)
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# Database (Supabase)
+spring.datasource.url=jdbc:postgresql://db.hhprnfycfjqjsstkukit.supabase.co:5432/postgres?sslmode=require
+spring.datasource.username=postgres
+spring.datasource.password=sSWKGfWI73eebFAo
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hikari
+# HikariCP (Connection Pool)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
-# JPA
+# JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
