--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,10 +5,10 @@ server.servlet.context-path=/
 # App
 spring.application.name=sectorista-backend
 
-# Database (Supabase)
-spring.datasource.url=jdbc:postgresql://db.hhprnfycfjqjsstkukit.supabase.co:5432/postgres?sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=sSWKGfWI73eebFAo
+# Database (Supabase - Pooler)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # HikariCP (Connection Pool)
