--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,22 +12,23 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # HikariCP (Connection Pool)
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=900000
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=0
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.idle-timeout=180000
+spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.leak-detection-threshold=300000
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.defer-datasource-initialization=true
 
 # Logging
 logging.level.root=INFO
