--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,6 +29,11 @@ spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.jpa.hibernate.use-new-id-generator-mappings=true
+
+# Disable eager entity scanning to allow deferred initialization
+spring.jpa.open-in-view=false
 
 # Logging
 logging.level.root=INFO
