--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,40 +2,25 @@
 server.port=${PORT:8080}
 server.servlet.context-path=/
 
-# App
 spring.application.name=sectorista-backend
 
-# Database (Supabase - Pooler)
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# NO pongas datasource aquí
+# Spring las tomará de:
+# SPRING_DATASOURCE_URL
+# SPRING_DATASOURCE_USERNAME
+# SPRING_DATASOURCE_PASSWORD
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# HikariCP (Connection Pool)
+# Hikari (ok para Supabase pooler)
 spring.datasource.hikari.maximum-pool-size=3
 spring.datasource.hikari.minimum-idle=0
 spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.idle-timeout=180000
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.auto-commit=true
-spring.datasource.hikari.leak-detection-threshold=300000
 
-# JPA / Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# JPA
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.jdbc.batch_size=20
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
-spring.jpa.hibernate.use-new-id-generator-mappings=true
-
-# Disable eager entity scanning to allow deferred initialization
 spring.jpa.open-in-view=false
-
-# Logging
-logging.level.root=INFO
-logging.level.com.sectorista=DEBUG
-logging.level.org.springframework.web=DEBUG
+spring.jpa.show-sql=false
