Código limpio, listo para GitHub

--- a/app-login/.gitignore
+++ b/app-login/.gitignore
@@ -1,17 +1,24 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
+# =====================================
+# Angular / Node
+# =====================================
+/app-login/dist/
+app-login/.angular/
+app-login/node_modules/
+npm-debug.log*
+yarn-error.log*
+/node_modules/
 
-# Compiled output
+# =====================================
+# Compiled output / temporary files
+# =====================================
 /dist
 /tmp
 /out-tsc
 /bazel-out
 
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
-
+# =====================================
 # IDEs and editors
+# =====================================
 .idea/
 .project
 .classpath
@@ -28,7 +35,9 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Miscellaneous
+# =====================================
+# Miscellaneous / Angular cache
+# =====================================
 /.angular/cache
 .sass-cache/
 /connect.lock
@@ -38,6 +47,21 @@ testem.log
 /typings
 __screenshots__/
 
+# =====================================
 # System files
+# =====================================
 .DS_Store
 Thumbs.db
+
+# =====================================
+# Environment / secret files
+# =====================================
+.env
+.env.local
+.env.*.local
+.env.production
+
+# =====================================
+# Build / other
+# =====================================
+/build/
