--- a/app-login/package.json
+++ b/app-login/package.json
@@ -1,14 +1,14 @@
 {
   "name": "app-login",
   "version": "0.0.0",
-"scripts": {
-  "ng": "ng",
-  "start": "ng serve",
-  "build": "ng build --configuration production",
-  "watch": "ng build --watch --configuration development",
-  "test": "ng test",
-  "serve:ssr:app-login": "node dist/app-login/server/server.mjs"
-},
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --configuration production",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "serve:ssr:app-login": "node dist/app-login/server/server.mjs"
+  },
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
@@ -35,7 +35,8 @@
     "bootstrap-icons": "^1.13.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.3.9",
